--- a/snippets/add-to-cart-form.liquid
+++ b/snippets/add-to-cart-form.liquid
@@ -1,40 +1,65 @@
-<form action="/cart/add" method="post" enctype="multipart/form-data" id="AddToCartForm">
-  {%- comment -%}
-     <select name="id" id="productSelect">
-      {% for variant in product.variants %}
-        {% if variant.available %}
-          <option value="{{ variant.id }}">{{ variant.title }} - {{ variant.price | money_with_currency }}</option>
-        {% else %}
-          <option disabled="disabled">{{ variant.title }} - sold out</option>
-        {% endif %}
-      {% endfor %}
-    </select>
-  {%- endcomment -%}
+<form action="/cart/add" method="post" enctype="multipart/form-data" id="add-to-cart-form">
   {%- if product.variants.size > 1 -%}
-    {%- for variant in product.variants -%}
-      <input type="radio" name="id" id="variant-{{ forloop.index }}" value="{{ variant.id }}">
-      <label for="variant-{{ forloop.index }}">{{ variant.title }}</label>
-    {%- endfor -%}
+    {%- comment -%} OPTION ROW 1 {%- endcomment -%}
+    <div class="option-row">
+      <span class="option-title">
+        {{ product.options.first }}
+      </span>
+      <div class="option-fieldset">
+        {%- for variant in product.variants -%}
+          <input
+            class="js-variant-radio"
+            type="radio"
+            name="id"
+            id="variant-{{ forloop.index }}"
+            value="{{ variant.id }}"
+            data-inventory-quantity="{{ variant.inventory_quantity }}"
+            {%- unless variant.available -%}
+              disabled
+            {%- endunless -%}
+          >
+          <label for="variant-{{ forloop.index }}">{{ variant.title }}</label>
+        {%- endfor -%}
+      </div>
+    </div>
   {%- else -%}
     <input type="hidden" name="id" value="{{ product.variants.first.id }}">
   {% endif %}
 
-  {{ current_variant.price | money }}
-  <label for="Quantity">quantity</label>
-  <input
-    type="number"
-    id="Quantity"
-    name="quantity"
-    value="1"
-    min="1"
-    {%- if product.variants.size == 1 -%}
-      max="{{ product.variants.first.inventory_quantity }}"
+  {%- comment -%} OPTION ROW 2 {%- endcomment -%}
+  <div class="option-row">
+    <label class="option-title" for="Quantity">{{ 'product.form.quantity' | t }}</label>
+    <div class="visually-hidden">
+      <input
+        class="js-quantity-field"
+        type="number"
+        id="Quantity"
+        name="quantity"
+        value="1"
+        min="1"
+        {%- if product.variants.size == 1 -%}
+          max="{{ product.variants.first.inventory_quantity }}"
+        {%- endif -%}
+      >
+    </div>
+
+    <div class="option-fieldset">
+      <button class="quanity-button js-quantity-button minus" type="button" disabled>&ndash;</button>
+
+      <span class="quantity-text js-quantity-text"> 1 </span>
+
+      <button class="quanity-button js-quantity-button plus" type="button">+</button>
+    </div>
+  </div>
+
+  <button
+    type="submit"
+    name="add"
+    id="add-to-cart-button"
+    {%- if product.variants.size > 1 -%}
+      disabled
     {%- endif -%}
   >
-
-  <button class="quanity-button minus" type="button" disabled>&ndash;</button>
-  <span class="quanity-text"> 1 </span>
-  <button class="quanity-button plus" type="button">+</button>
-
-  <button type="submit" name="add" id="AddToCart">Add to cart</button>
+    Add to cart
+  </button>
 </form>
