--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -7,7 +7,7 @@
   <link rel="canonical" href="{{ canonical_url }}">
   <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
   {{ content_for_header }} <!-- Header hook for plugins -->
-  {{ 'application.scss.css' | asset_url | stylesheet_tag }}
+  {{ 'application.css' | asset_url | stylesheet_tag }}
   <script src="//code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
   {{ 'application.js' | asset_url | script_tag }}
 </head>
