--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -1,18 +1,18 @@
 <footer class="footer-global">
   {%- comment -%} TOP FOOTER  {%- endcomment -%}
-  <div class="footer-top">
+  <div class="footer-top grid">
     {%- comment -%} product list {%- endcomment -%}
     <ul class="products-list">
-      {{ 'footer.list.products' | t }}
+      <h4>{{ 'footer.list.products' | t }}</h4>
       {%- for product in collections.frontpage.products limit: 4 -%}
         <li>
-          <a href="{{ product.url }}">{{ product.title }}</a>
+          <a class="h2" href="{{ product.url }}">{{ product.title }}</a>
         </li>
       {%- endfor -%}
     </ul>
     {%- comment -%} conditions list {%- endcomment -%}
     <ul class="contact-list">
-      {{ linklists.footer.title }}
+      <h4>{{ linklists.footer.title }}</h4>
       {% for link in linklists.footer.links %}
         <li>
           {% assign child_list_handle = link.title | handleize %}
@@ -31,14 +31,14 @@
     </ul>
     {%- comment -%} about description {%- endcomment -%}
     <div class="about-us">
-      {{ 'general.about.title' | t }}
+      <h4>{{ 'general.about.title' | t }}</h4>
       <p>{{ 'general.about.description' | t }}</p>
     </div>
   </div>
   {%- comment -%} BOTTOM FOOTER {%- endcomment -%}
   <div class="footer-bottom">
     {%- assign copyright_date = 'now' | date: '%Y' -%}
-    <span>{{ 'footer.bottom.copyright' | t: date: copyright_date }} </span>
+    <span class="h4">{{ 'footer.bottom.copyright' | t: date: copyright_date }} </span>
     <div class="social-links">
       <a href="{{ 'footer.social.facebook_url '}}" target="new">
         <img src="{{ 'facebook.svg' | asset_url }}" alt="{{ 'footer.social.alt' | t: social: 'facebook' }}">
