--- a/snippets/header.liquid
+++ b/snippets/header.liquid
@@ -8,11 +8,12 @@
   </a>
 
   {%- comment -%} CART COUNT {%- endcomment -%}
-  <a href="/" class="shop-link text-link">{{ 'header.nav.shop' | t }}</a>
+  <a href="/" class="shop-link text-link">{{ 'header.nav.shop' | t }} </a>
 
   {%- assign cart_text = 'cart.button.count_html' | t: itemCount: cart.item_count -%}
   {%- assign cart_close_text = 'cart.button.close' | t -%}
 
+  {%- comment -%} CART LINK  {%- endcomment -%}
   <a href="/cart" class="cart-link text-link">
     <span class="cart-text">{{ cart_text }}</span>
     <span class="cart-close-text">{{ cart_close_text }}</span>
