--- a/assets/application.css.liquid
+++ b/assets/application.css.liquid
@@ -170,9 +170,40 @@ p {
 
 /* utility clases */
 
+.wrapper {
+  padding-left: var(--offset-global);
+  padding-right: var(--offset-global);
+}
+
 .grid {
   display: grid;
   grid-gap: var(--gutter-global)
+}
+
+.two-columns {
+  grid-template-columns: 1fr 1fr;
+}
+
+.collapse {
+  grid-gap: 0;
+}
+
+.valign-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.ta-center {
+  text-align: center;
+}
+
+.text-white {
+  color: var(--white)
+}
+
+.color-accent {
+  color: var(--text-color-white);
 }
 
 /* header */
@@ -187,6 +218,7 @@ p {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 100;
 }
 
 h4 {
@@ -240,4 +272,66 @@ h4 {
 
 .social-links a:not(:last-child) {
     margin-right: calc(var(--line-global) / 2);
+}
+
+/* index page */
+
+.index-top {
+  height: 50vh;
+  min-height: 400px;
+  padding-bottom: var(--offset-global);
+}
+
+/* shared product styles */
+
+.product-info-section {
+  background-color: var(--light-black);
+  padding: var(--offset-global);
+  display: flex;
+  flex-direction: column;
+  text-align: center:
+}
+
+.product-title {
+  padding: var(--line-global);
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.price {
+  display: inline-block;
+  font-size: var(--line-global);
+  color: var(--text-color-white);
+  font-weight: var(--type-book);
+  vertical-align: super;
+}
+
+.below-title {
+  max-width: 396px;
+  margin: 0 auto;
+}
+
+.below-title p {
+  margin-bottom: var(--line-global)
+}
+
+.product-options {
+  display: block;
+}
+
+.card-image a {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.card-image img {
+  display:block;
+  max-width: 100%;
+  height: auto;
+}
+
+.card-inner div:nth-child(odd) {
+  grid-column: 0;
+  grid-row: 1;
 }
