--- a/sections/product-section.liquid
+++ b/sections/product-section.liquid
@@ -3,23 +3,26 @@
 {% assign featured_image = current_variant.featured_image | default: product.featured_image %}
 
 {%- comment -%} PRODUCT FORMS {%- endcomment -%}
-<div id="page-product">
-  <div class="product-info">
-    <h1>
+<div id="page-product" class="wrapper grid two-columns collapse">
+  <div class="product-info product-info-section ta-center">
+    <h2 class="product-title text-white">
       {{ product.title }}
       <span class="price">{{ product.price | money_without_trailing_zeros }}</span>
-    </h1>
+    </h2>
 
-    <div>{{ product.description }}</div>
-    ß
-    {%- render 'add-to-cart-form' -%}
+    <div class="below-title text-white">
+      <div>
+        <p class="text-white">{{ product.description }}</p>
+      </div>
+      {%- render 'add-to-cart-form' -%}
+    </div>
   </div>
 
   {%- comment -%} IMAGES {%- endcomment -%}
   {%- comment -%} PRODUCT IMAGES{%- endcomment -%}
   {% for image in product.images %}
     <div class="product-image">
-      <img src="{{ image.src | img_url: '600x600', crop: 'center' }}" alt="{{ image.alt | escape }}">
+      <img src="{{ image.src | img_url: '800x800', crop: 'center' }}" alt="{{ image.alt | escape }}">
     </div>
   {% endfor %}
 </div>
