--- a/snippets/add-to-cart-form.liquid
+++ b/snippets/add-to-cart-form.liquid
@@ -8,7 +8,7 @@
       <div class="option-fieldset">
         {%- for variant in product.variants -%}
           <input
-            class="js-variant-radio"
+            class="variant-radio js-variant-radio visually-hidden"
             type="radio"
             name="id"
             id="variant-{{ forloop.index }}"
