--- a/sections/product-section.liquid
+++ b/sections/product-section.liquid
@@ -11,7 +11,7 @@
     </h2>
 
     <div class="below-title text-white">
-      <div>
+      <div class="below-title-2 product-description">
         <p class="text-white">{{ product.description }}</p>
       </div>
       {%- render 'add-to-cart-form' -%}
