--- a/snippets/add-to-cart-form.liquid
+++ b/snippets/add-to-cart-form.liquid
@@ -44,11 +44,11 @@
     </div>
 
     <div class="option-fieldset">
-      <button class="quanity-button js-quantity-button minus" type="button" disabled>&ndash;</button>
+      <button class="quantity-button js-quantity-button minus" type="button" disabled>&ndash;</button>
 
       <span class="quantity-text js-quantity-text"> 1 </span>
 
-      <button class="quanity-button js-quantity-button plus" type="button">+</button>
+      <button class="quantity-button js-quantity-button plus" type="button">+</button>
     </div>
   </div>
 
