cart page styles

--- a/snippets/line-item.liquid
+++ b/snippets/line-item.liquid
@@ -1,22 +1,24 @@
-<div class="line-item">
-  <div class="line-intro">
-    <a href="{{ item.url }}">
-      {{ item.product.title }}
-      <span>x{{ item.quantity }}</span>
-    </a>
-    <p>
-      {{ item.variant.title }} &ndash; {{ item.line_price | money_without_trailing_zeros }}
-      {%- if item.quantity > 1 -%}
-        ( {{ item.price | money_without_trailing_zeros }}/ea)
-      {%- endif -%}
-    </p>
-  </div>
-  <div class="line-image">
-    <a href="{{ item.url }}">
-      <img src="{{ item | img_url: 'medium' }}" alt="{{ item.title | escape }}">
-    </a>
-    <a class="remove-line" href="/cart/change?line={{ forloop.index }}&amp;quantity=0">
-      <img src="{{ 'x-remove.svg' | asset_url }}" alt="remove">
-    </a>
+<div class="text-white">
+  <div class="line-item text-white">
+    <div class="line-intro">
+      <a href="{{ item.url }}" class="line-title text-white">
+        <span class="h3 text-white">{{ item.product.title }}</span>
+        <span class="accent-color">x{{ item.quantity }}</span>
+      </a>
+      <p class="text-white">
+        {{ item.variant.title }} &ndash; {{ item.line_price | money_without_trailing_zeros }}
+        {%- if item.quantity > 1 -%}
+          ( {{ item.price | money_without_trailing_zeros }}/ea)
+        {%- endif -%}
+      </p>
+    </div>
+    <div class="line-image">
+      <a href="{{ item.url }}">
+        <img src="{{ item | img_url: '200x200', crop: 'center' }}" alt="{{ item.title | escape }}">
+      </a>
+      <a class="remove-line" href="/cart/change?line={{ forloop.index }}&amp;quantity=0">
+        <img src="{{ 'x-remove.svg' | asset_url }}" alt="remove">
+      </a>
+    </div>
   </div>
 </div>
