--- a/assets/application.css.liquid
+++ b/assets/application.css.liquid
@@ -196,6 +196,7 @@ button[type=submit], .button {
   background: var(--gold);
   color: var(--white);
   margin-top: var(--line-global);
+  display: inline-block;
 }
 
 button[type=submit]:disabled, .button:disabled {
@@ -494,6 +495,17 @@ h4 {
 
 /* shared cart styles */
 
+.cart-lines {
+  margin-top: var(--line-global);
+  color: var(--white);
+  border-top: var(--standard-border-white);
+  border-bottom: var(--standard-border-white);
+  padding: var(--line-global) 0;
+}
+
+.cart-empty-text {
+  margin: calc(var(--line-global)*4) 0;
+}
 
 /* line styles */
 
@@ -532,4 +544,17 @@ h4 {
 
 .line-item:not(:first-child) {
   margin-top: var(--line-global)
+}
+
+.subtotal-line {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: var(--line-global) 0;
+  
+}
+
+.subtotal-line p {
+  color: var(--white) !important;
 }
