--- a/snippets/cart-contents.liquid
+++ b/snippets/cart-contents.liquid
@@ -1,5 +1,5 @@
 {% if cart.item_count > 0 %}
-  <p>{{ 'cart.filled.title' | t }}</p>
+  <p class="ta-center">{{ 'cart.filled.title' | t }}</p>
   <form action="/cart" method="post" novalidate>
     <div class="cart-lines">
       {% render 'line-item' for cart.items as item %}
@@ -15,6 +15,6 @@
     <button type="submit" name="checkout">{{ 'cart.filled.button' | t }}</button>
   </form>
 {% else %}
-  <p class="cart-empty-text">{{ 'cart.empty.title' | t }}</p>
+  <p class="cart-empty-text ta-center">{{ 'cart.empty.title' | t }}</p>
   <a href="/" class="button">{{ 'cart.empty.button' | t }}</a>
 {% endif %}
