--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -17,8 +17,11 @@
 
   <main role="main">
     {{ content_for_layout }}
+    {%- render 'footer' -%}
   </main>
   
-{%- render 'footer' -%}
+  {%- if template != cart -%}
+    {%- render 'mini-cart' -%}
+  {%- endif -%}
 </body>
 </html>
