--- a/sections/cart-section.liquid
+++ b/sections/cart-section.liquid
@@ -1,5 +1,5 @@
 <div id="page-cart" class="wrapper">
-  <div class="cart-page-contents">
+  <div class="cart-page-contents js-cart-page-contents" data-cart-item-count="{{ cart.item_count }}">
     {%- render 'cart-contents' -%}
   </div>
 </div>
