--- a/snippets/header.liquid
+++ b/snippets/header.liquid
@@ -14,7 +14,7 @@
   {%- assign cart_close_text = 'cart.button.close' | t -%}
 
   {%- comment -%} CART LINK  {%- endcomment -%}
-  <a href="/cart" class="cart-link text-link">
+  <a href="/cart" class="cart-link text-link js-cart-link">
     <span class="cart-text">{{ cart_text }}</span>
     <span class="cart-close-text">{{ cart_close_text }}</span>
   </a>
